v0.1.0-alpha.25/_sources/autoapi/ape_accounts/accounts/index.rst.txt
:mod:`ape_accounts.accounts`
============================

.. py:module:: ape_accounts.accounts




.. raw:: html

   <h3>Module Contents</h3>

**Classes**:

.. autoapisummary::

   ape_accounts.accounts.AccountContainer
   ape_accounts.accounts.KeyfileAccount





-----------


.. py:exception:: InvalidPasswordError

   Bases: :py:obj:`ape.exceptions.AccountsError`

   Raised when password to unlock an account is incorrect.

   .. py:method:: __init__(self)

      Initialize self.  See help(type(self)) for accurate signature.





.. py:class:: AccountContainer

   Bases: :py:obj:`ape.api.AccountContainerAPI`

   .. py:method:: _keyfiles(self) -> Iterator[pathlib.Path]
      :property:


   .. py:method:: aliases(self) -> Iterator[str]
      :property:


   .. py:method:: __len__(self) -> int


   .. py:method:: __iter__(self) -> Iterator[ape.api.AccountAPI]





.. py:class:: KeyfileAccount

   Bases: :py:obj:`ape.api.AccountAPI`

   .. attribute:: _keyfile
      :annotation: :pathlib.Path

      

   .. py:method:: __post_init__(self)


   .. py:method:: alias(self) -> str
      :property:

      Override with whatever alias might want to use, if applicable


   .. py:method:: keyfile(self) -> dict
      :property:


   .. py:method:: address(self) -> ape.types.AddressType
      :property:


   .. py:method:: __key(self) -> eth_account.Account
      :property:


   .. py:method:: unlock(self)


   .. py:method:: lock(self)


   .. py:method:: change_password(self)


   .. py:method:: delete(self)


   .. py:method:: sign_message(self, msg: ape.types.SignableMessage) -> Optional[ape.types.MessageSignature]


   .. py:method:: sign_transaction(self, txn: ape.api.TransactionAPI) -> Optional[ape.types.TransactionSignature]




